2008-05-02  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Geoffrey Garen.

        https://bugs.webkit.org/show_bug.cgi?id=18826
        Make JavaScript heap per-thread

        * Misc/WebCoreStatistics.mm:
        (+[WebCoreStatistics javaScriptObjectsCount]):
        (+[WebCoreStatistics javaScriptGlobalObjectsCount]):
        (+[WebCoreStatistics javaScriptProtectedObjectsCount]):
        (+[WebCoreStatistics javaScriptProtectedGlobalObjectsCount]):
        (+[WebCoreStatistics javaScriptProtectedObjectTypeCounts]):
        (+[WebCoreStatistics javaScriptReferencedObjectsCount]):
        Replaced static Collector calls with calls to a current thread's instance.

        * WebView/WebScriptDebugDelegate.mm:
        (-[WebScriptCallFrame evaluateWebScript:]):
        Pass ExecState to jsString().

2008-05-01  Anders Carlsson  <andersca@apple.com>

        Reviewed by Mark.

        64-bit NPAPI plugin build fixes.
        
        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView saveAndSetNewPortStateForUpdate:]):
        (-[WebBaseNetscapePluginView updateAndSetWindow]):
        (-[WebBaseNetscapePluginView start]):
        (-[WebBaseNetscapePluginView windowBecameKey:]):
        * Plugins/WebNetscapeDeprecatedFunctions.c:
        * Plugins/WebNetscapeDeprecatedFunctions.h:
        * Plugins/WebNetscapePluginEventHandler.mm:
        (WebNetscapePluginEventHandler::create):
        * Plugins/WebNetscapePluginEventHandlerCarbon.h:
        * Plugins/WebNetscapePluginEventHandlerCarbon.mm:
        * Plugins/WebPluginDatabase.m:
        (-[WebPluginDatabase pluginForKey:withEnumeratorSelector:]):

2008-05-01  Anders Carlsson  <andersca@apple.com>

        Reviewed by Tim.

        Remove duplicate npfunctions.h header from WebKit.

        * MigrateHeaders.make:
        Migrate npfunctions.h
        
        * Plugins/npfunctions.h: Removed.

2008-05-01  Anders Carlsson  <andersca@apple.com>

        Reviewed by John.
        